    export to export in UTF-8, modified RIS export to export in latin-1 (don't
    squash hi-byte chars), fixing #2934
 * Don't fill in autocompletion on tab, fixing #3247

2008-02-04 tdb
 * Re-enabled remote retrieval in XML::DOM's parsefile

2008-02-05 tdb
 * Added support for 'contributors' in DOI import
 * Added export plugin for OpenURL COinS, hidden ContextObject dependencies

2008-02-06 tdb
 * Removed debug log message in Platform::exec
 * Added EPrints namespace to <eprints> in XML export
 * Only match whole words as logical operators, fixing #3252
 * Added an "id" attribute to <select> fields, which means that they can be 
   	found with prototype $F() method -- fixing some issues with autocomplete.
 * Updated to scriptaculous 1.8.1
 * Work-around for autocompletion not working in Opera, fixing #3041

2008-02-07 tdb
 * Don't roll indexer logs on start/stop, only every 24 hours, fixing #2855
 * Make sure we actually remove index_queue entries, fixing #3256

2008-02-19 tdb
 * Updated explain_tables, fixing #3248
 * strip spaces and lowercase when normalising for comparison, fixing #3263
 * utf8 decode values before passing to Unidecode, fixing #3270

2008-02-20 tdb
 * Request-a-copy email now goes to the correct person, fixing #3260
 * Emailed HTML now rendered with EPrints::XML::to_string

2008-02-28 tdb
 * Corrected link in editor alert email, fixing #3286
 * Fixed an undef warning in EPrints::Email

2008-03-04 tdb
 * Corrected typo in search alert email URL
 * Fixed HTTPS support/sub-directory support simplified

2008-03-07 tdb
 * Put javascripts inside CDATA sections, fixing #3303

2008-03-27 tdb
 * Allow values to be used in views containing ':' or '.', fixing #3316

2008-04-02 tdb
 * Don't set the port if it's the default for the URI, fixing #3325

2008-04-08 tdb
 * Added Apache rewrite rule for /archive/* to /*, fixing #3328
 * Quick search entry now points at http_cgiurl, fixing #3312
