@@ -6714,4 +6714,5 @@ PACKAGE: 2.2.99.2
 2008-04-08 tdb
  * Added Apache rewrite rule for /archive/* to /*, fixing #3328
  * Quick search entry now points at http_cgiurl, fixing #3312
+ * Changed workflow autocomplete URLs to use http_cgiurl, fixing #3327
 
